--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,9 @@
-Flask==2.3.3
-Flask-CORS==4.0.0
-opencv-python==4.8.1.78
-mediapipe==0.10.7
-numpy==1.24.3
-scikit-learn==1.3.0
-Werkzeug==2.3.7
-gunicorn==21.2.0
-python-dotenv==1.0.0
+Flask>=2.3.0
+Flask-CORS>=4.0.0
+opencv-python>=4.8.0
+mediapipe>=0.10.14
+numpy>=1.24.0
+scikit-learn>=1.3.0
+Werkzeug>=2.3.0
+gunicorn>=21.0.0
+python-dotenv>=1.0.0
