--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,6 @@
 Flask>=2.3.0
 Flask-CORS>=4.0.0
-opencv-python>=4.8.0
+opencv-python-headless>=4.8.0
 mediapipe>=0.10.14
 numpy>=1.24.0
 scikit-learn>=1.3.0
