--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,9 @@
-Flask>=2.3.0
-Flask-CORS>=4.0.0
-opencv-python-headless>=4.8.0
-mediapipe>=0.10.14
-numpy>=1.24.0
-scikit-learn>=1.3.0
-Werkzeug>=2.3.0
-gunicorn>=21.0.0
-python-dotenv>=1.0.0
+Flask==2.3.3
+Flask-CORS==4.0.0
+opencv-python-headless==4.7.1.72
+mediapipe==0.9.3.0
+numpy==1.21.6
+scikit-learn==1.1.3
+Werkzeug==2.3.7
+gunicorn==21.0.0
+python-dotenv==1.0.0
