--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,9 @@
-Flask==2.3.3
-Flask-CORS==4.0.0
-opencv-python-headless==4.8.1.78
-mediapipe==0.10.7
-numpy==1.24.3
-scikit-learn==1.3.0
-Werkzeug==2.3.7
-gunicorn==21.0.0
-python-dotenv==1.0.0
+Flask
+Flask-CORS
+opencv-python-headless
+mediapipe
+numpy
+scikit-learn
+Werkzeug
+gunicorn
+python-dotenv
