--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -1,5 +1,6 @@
 services:
   - type: web
     name: skateiq-backend
-    env: docker
-    dockerfilePath: ./Dockerfile
+    env: python
+    buildCommand: pip install -r requirements.txt
+    startCommand: gunicorn app:app
