--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -1,6 +1,5 @@
 services:
   - type: web
     name: skateiq-backend
-    env: python
-    buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn app:app
+    env: docker
+    dockerfilePath: ./Dockerfile
